bin/test/fixtures/public/fail/syntactical/MissingRightPar.jmm
class MissingRightPar {
	public static void main(String[] args) {
	while (i < 10 {
		}
	
		while (i < 10 {
		}
}